src/objects/Contact_Team__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Job_Title__c</fullName>
        <formula>TEXT(Contact__r.Job_Title__c)</formula>
        <label>Contact Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Teams</relationshipLabel>
        <relationshipName>Contact_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Internal_User_Role__c</fullName>
        <formula>Internal_User__r.UserRole.Name</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <label>User Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Contact Team</label>
    <nameField>
        <displayFormat>CTM-{0000}</displayFormat>
        <label>Contact Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>